# generative_agents

./: .envrc  README.md  flake.nix  pyproject.toml
api/: __init__.py  urls.py  views.py
config/: asgi.py  settings.py  urls.py  wsgi.py
core/: __init__.py  agent.py  memory.py  personality.py  simulation.py  world.py
core/cognitive/: __init__.py  converse.py  execute.py  perceive.py  plan.py  reflect.py  retrieve.py
frontend/: __init__.py  consumers.py  routing.py  urls.py  views.py
frontend/templates/: base.html
frontend/templates/demo/: demo.html
frontend/templates/home/: home.html
frontend/templates/landing/: landing.html
frontend/templatetags/: json_filters.py
services/: __init__.py  embeddings.py  llm.py
tests/: __init__.py  conftest.py  test_core.py  test_world.py
